--- a/src/App.css
+++ b/src/App.css
@@ -1,15 +1,16 @@
 .main-container {
-  width: 80%;
+  width: 100%;
   height: 100%;
   margin-left: auto;
   margin-right: auto;
   padding: 10px;
+  color:rgba(19, 46, 113, 1)
   
 }
 .main-bar-user {
   display: flex;
   justify-content: flex-end;
-  padding: 5px;
+  padding: 10px 5px;
   
 }
 .main-bar-margin-right
@@ -19,11 +20,14 @@
 .main-bar-ticket {
   display: flex;
   justify-content: space-between;
-  padding: 5px;
+  padding: 10px 5px;
   
 }
 .main-lot-icon {
   width: 120px;
+}
+.main-bar-logo{
+  padding: 0.5rem;
 }
 .main-lot-reservation {
   display: flex;
@@ -48,4 +52,57 @@
 .section-border-bottom
 {
   border-bottom: 1px solid black;
+}
+.nav-search-input
+{
+  background-clip: padding-box;
+    border: 1px solid #ced4da;
+    border-radius: .25rem;
+    transition: border-color .15s
+}
+.nav-section{
+  display: flex;
+  justify-content: space-between;
+  padding: 10px 5px;
+}
+.active-link{
+  font-weight: 700;
+  position: relative;
+}
+.active-link:before{
+  content: "";
+  position: absolute;
+  width: 50%;
+  height: 1px;
+  bottom: 0;
+  left: 25%;
+  border-bottom: 2px solid rgb(45, 45, 88);
+}
+a{
+  color:rgba(19, 46, 113, 1);
+  text-decoration: none;
+    background-color: transparent;
+}
+.a-decorations{
+  text-decoration: underline;
+}
+.carousel-item{
+  max-height: 600px;
+  }
+/* .fullscreen {
+  width: 100vw;
+  position: absolute;
+  left: 0;
+} */
+.carousel-height {
+  height: 600px;
+}
+/* .wide-div {
+  width: 100vw;
+  margin-left: calc(-50vw + 50%);
+  
+} */
+.carousel-item > img.w-100
+{
+  max-height: 400px;
 }
