--- a/src/style/headerStyle.scss
+++ b/src/style/headerStyle.scss
@@ -1,44 +1,75 @@
+.header-bar {
+  width: 80%;
+  margin-right: auto;
+  margin-left: auto;
+}
+.header-top-object {
+  margin-left: 2%;
+  display: flex;
+  align-items: center;
+
+  width: 120px;
+  font-weight: 500;
+}
+.header-top-object > select {
+  margin-left: 0.5vw;
+  border: none;
+}
 .main-lot-reservation {
-    display: flex;
-    align-items: center;
-    line-height: 10px;
-    display: flex;
-    justify-content: flex-end;
-    padding-right: 10%;
-  }
-  .main-bar-user {
-    display: flex;
-    justify-content: flex-end;
-    padding: 10px 5px;
-  }
-  .main-bar-margin-right
-{
-  margin-left: 20px;
+  display: flex;
+  align-items: center;
+  line-height: 10px;
+  display: flex;
+  justify-content: flex-end;
+  padding-right: 10%;
+}
+.main-bar-user {
+  display: flex;
+  justify-content: flex-end;
+  padding: 10px 5px;
+}
+.main-bar-margin-left {
+  margin-left: 1.2vw;
 }
 .main-bar-ticket {
-    display: flex;
-    justify-content: space-between;
-    padding: 10px 5px;
-  }
-  .section-border-bottom
-{
+  display: flex;
+  justify-content: space-between;
+  padding: 10px 5px;
+}
+.section-border-bottom {
   border-bottom: 1px solid black;
 }
-.main-bar-logo{
-    padding: 0.5rem;
+.main-bar-logo {
+  padding: 0.5rem;
+}
+.main-lot-icon {
+  width: 120px;
+}
+.main-lot-reservation img {
+  width: 60px;
+}
+.main-lot-reservation-text {
+  margin-left: 10px;
+}
+.main-lot-reservation-text p:nth-child(2) {
+  display: flex;
+  justify-content: space-between;
+}
+
+@media screen and (max-width: 800px) {
+  .header-bar {
+    width: 100%;
+    margin-right: auto;
+    margin-left: auto;
   }
-  .main-lot-icon {
-    width: 120px;
+  .main-bar-user {
+    justify-content: space-between;
   }
-  .main-lot-reservation  img{
-    width: 60px;
+  .main-bar-ticket {
+    padding: 0;
   }
-  .main-lot-reservation-text {
-    margin-left: 10px;
+  .main-lot-reservation {
+    padding-right: 10%;
   }
-  .main-lot-reservation-text p:nth-child(2)
-  {
-    display: flex;
-      justify-content: space-between;
-      
-  }
+
+}
