--- a/src/style/home.css
+++ b/src/style/home.css
@@ -1,10 +1,10 @@
-.occasions-main {
+/* .occasions-main {
   width: 80%;
   display: flex;
   justify-content: space-between;
   margin: auto;
   flex-wrap: wrap;
-}
+} */
 .occasion-element {
     width: 20%;
     background-color: red;
