--- a/src/style/navbarStyle.scss
+++ b/src/style/navbarStyle.scss
@@ -17,6 +17,7 @@
   display: flex;
   justify-content: space-between;
   padding: 10px 5px;
+  align-items: center;
 }
 .active-link{
   font-weight: 700;
@@ -39,3 +40,40 @@ a{
 .a-decorations{
   text-decoration: underline;
 }
+
+.hidden-navbar{
+    position: fixed;
+    top: 0;  
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgb(255, 255, 255);
+    z-index: 99;
+    opacity: 0.96;
+    
+}
+@media screen and (max-width: 800px) {
+    .nav{
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        font-size:5vw;
+    }
+    .active-link:before {
+        content: "";
+        position: absolute;
+        width: 100%;
+        height: 1px;
+        bottom: 0;
+        left: 0%;
+        border-bottom: 2px solid #2d2d58;
+       
+      }
+    //   .nav-item{
+    //       width: 30%;
+    //   }
+      .nav-section > .col-sm-3
+      {
+          min-width: 70%;
+      }
+    }
