--- a/src/style/shopItemStyle.scss
+++ b/src/style/shopItemStyle.scss
@@ -3,7 +3,7 @@
 }
 .currentPrice{
 @extend %priceColor;
-font-size: 1.5rem;
+font-size: 1.5vw;
 
 font-weight: 600;
 }
@@ -16,3 +16,12 @@ font-weight: 600;
     justify-content: space-around;
     align-items: baseline;
 }
+
+.link-button {
+    width: 100%;
+    background-color: rgba(19, 46, 113, 1);
+    color: white;
+    padding: 5px 10px;
+    text-align: center;
+    font-size: 1.3vw;
+  }
