--- a/src/style/specialsStyle.scss
+++ b/src/style/specialsStyle.scss
@@ -1,5 +1,4 @@
 %special-picture {
-  
   background-size: cover;
 }
 .special-bottom-div {
@@ -37,51 +36,74 @@
   @extend %special-bottom-text;
 }
 
-%p-max100{
-    width: 90%;
-    margin: 0;
-    text-align: end;
+%p-max100 {
+  width: 90%;
+  margin: 0;
+  text-align: end;
 }
-.special-p-main
-{
-    @extend %p-max100;
-    font-size: 1vw;
-    font-weight: 600;
+.special-p-main {
+  @extend %p-max100;
+  font-size: 1vw;
+  font-weight: 600;
 }
-.special-p-desc
-{
-    @extend %p-max100;
-    font-size: 0.8vw;
-    font-weight: 400;
+.special-p-desc {
+  @extend %p-max100;
+  font-size: 0.8vw;
+  font-weight: 400;
 }
-.special-text-container
-{
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    align-items: center;
-    color: white
+.special-text-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  color: white;
 }
-.special-text-main{
-    display: flex;
-    flex-direction: column;
-    text-align: center;
+.special-text-main {
+  display: flex;
+  flex-direction: column;
+  text-align: center;
 }
-.special-text-main >p{
-margin-bottom: 0.2vw;
-font-size: 2vw;
+.special-text-main > p {
+  margin-bottom: 0.2vw;
+  font-size: 2vw;
 }
-.special-text-main > span
-{
-font-size: 1vw;
+.special-text-main > span {
+  font-size: 1vw;
 }
-.special-text-button
-{   border: 2px solid white;
-    
-    border-radius: 5%;
-    transform: translateY(50px);
+.special-text-button {
+  border: 2px solid white;
+  border-radius: 5%;
+
 }
-.special-text-button > p{
-    
-    margin: 5px 15px;
+.special-text-button > p {
+  margin: 5px 15px;
+}
+
+.special-offerts {
+  background-color: red;
+  display: flex;
+  flex-wrap: wrap;
+}
+.special-add-container {
+  display: flex;
+  justify-content: space-between;
+  flex-wrap: wrap;
+  width: 80%;
+  margin: auto;
+}
+.special-add-objects {
+  width: 48%;
+  height: 300px;
+}
+@media screen and (max-width: 800px) {
+  .special-add-container{
+    padding-top:10px ;
+    width: 100%;
+   
+  }
+  .special-add-objects {
+    width: 100%;
+    height: 150px;
+    margin-bottom: 5px;;
+  }
 }
