--- a/src/style/footerStyle.scss
+++ b/src/style/footerStyle.scss
@@ -1,44 +1,91 @@
-.footer-main
-{
-    width: 80%;
-    margin: auto;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+.footer-main {
+  width: 80%;
+  margin: auto;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding-bottom: 10px;
+  div{
+    font-weight: 600;
+  }
 }
-.footer-nav-object{
+.footer-nav{
+  list-style-type: none;
+  display: flex;
   
-    padding-top: 10px;
-    padding-bottom: 10px;
-    @extend %text-footer;
+  align-items: center;
+  font-size: 2rem;
+  padding: 0;
+    margin: 0;
 }
-.footer-nav-object:hover{
+.footer-nav-object {
+  padding-top: 10px;
+  padding-bottom: 10px;
+  font-size: 1.2rem;
+  // font-weight: 500;
+  text-align: center;
+}
+.footer-nav-object:hover {
+  cursor: pointer;
+}
+.footer-nav-object:not(:first-child) {
+  margin-left: 30px;
+}
+.footer-nav-active-link {
+  font-size: 1.5rem;
+  font-weight: 800;
+}
+.footer-right {
+  display: flex;
+  justify-content: flex-end;
+  align-items: center;
+  font-size: 1.2rem;
+  font-weight: 500;
+}
+.footer-social-pictures {
+  margin-left: 20px;
+  display: flex;
+}
+.footer-social-logo {
+  width: 30px;
+  img:hover{
     cursor: pointer;
+  }
+  
+    
+  
 }
-.footer-nav-object:not(:first-child){
-    margin-left: 30px;
+.footer-social-img {
+  width: 100%;
+ 
+  
 }
-.footer-nav-active-link{
-    font-size: 1.5vw;
+// .footer-social-img:hover{
+//   cursor: pointer;
+// }
+@media screen and (max-width: 1160px) {
+  .footer-nav-object, .footer-social-text {
+    text-align: center;
+    font-size: 0.8rem;
+  }
 }
-.footer-right
-{
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
-    @extend %text-footer;
+@media screen and (max-width: 1000px) {
+    .footer-nav-object, .footer-social-text {
+    font-size: 0.8rem;
+  }
 }
-.footer-social-pictures{
-    margin-left: 20px;
-display: flex;
+@media screen and (max-width: 820px) {
+  .footer-main {
+    flex-direction: column;
+  }
 }
-.footer-social-logo{
-    width: 30px;
+@media screen and (max-width: 330px) {
+
+  .footer-nav {
+    flex-direction: column;
+  }
 }
-.footer-social-img{
-    width: 100%;
-}
-%text-footer{
-    font-size: 1.2vw;
-    font-weight: 500;
+%text-footer {
+  font-size: 1.2rem;
+  font-weight: 500;
 }
