--- a/src/style/informationStyle.scss
+++ b/src/style/informationStyle.scss
@@ -15,22 +15,28 @@
 }
 .information-div {
   width: 25%;
-
+min-width: 170px;
   font-weight: 500;
 }
 .information-title {
   padding-top: 10px;
   padding-bottom: 10px;
+  font-size: 0.9rem;
+  font-weight: 700;;
 }
 .information-content {
-  font-size: 0.9vw;
+  font-size: 0.8rem;
 }
-.information-content p {
+.information-content {
+  p{
   margin: 0;
+  }
 }
-.information-content > p:hover {
+.information-content   {
+  p:hover{
   cursor: pointer;
   text-decoration: underline;
+  }
 }
 .information-contact-type {
   display: flex;
@@ -43,11 +49,12 @@
 }
 .contact-form-a {
   text-decoration: underline;
+  :hover {
+    cursor: pointer;
+    font-size: 1rem;
+  }
 }
-.contact-form-a:hover {
-  cursor: pointer;
-  font-size: 1vw;
-}
+
 .square-www {
   width: 22%;
 }
@@ -55,8 +62,59 @@
   display: flex;
   align-items: center;
   margin-right: 10px;
+  img {
+    width: 100%;
+  }
 }
 
-.container-card-logo img {
-  width: 100%;
+
+
+
+.information-content-small
+{
+  background-color: white;
+    height: 0px;
+    border: 1px solid white;
+    border-radius: 0.5rem;
+    overflow: hidden;
+    transition-duration: 1s;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    p {
+      font-size: 1rem;
+      font-weight: 500;
+    }
+}
+.information-main-buttons{
+  border: 2px solid;
+    border-radius: 0.5rem;
+    display: flex;
+    align-items: center;
+    padding: 3px;
+    p {
+      margin: 0;
+      padding-left: 20px;
+      font-size: 1.2rem;
+      font-weight: 500;
+      }
+}
+
+.information-content-small .container-card-logo{
+  justify-content: center;
+}
+
+.information-main-buttons:hover, .information-content-small p:hover{
+  cursor: pointer;
+}
+@media screen and (max-width: 800px) {
+  .informatin-main { 
+    flex-direction: column;
+  }
+}
+@media screen and (max-width: 580px) {
+  .informatin-main { 
+    width: 100%;
+  }
 }
