--- a/src/style/joinFormStyle.scss
+++ b/src/style/joinFormStyle.scss
@@ -1,7 +1,6 @@
 .join-form-icon {
   padding: 20px;
   border-radius: 50%;
-  /* border: 1px solid; */
   background: white;
 }
 .left-container {
@@ -9,9 +8,11 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  height: 200px;
 }
 .right-container {
   width: 40%;
+  height: 200px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -22,35 +23,106 @@
   margin: auto;
   width: 80%;
   display: flex;
+  flex-wrap: wrap;
 }
 .join-form-container {
   background-image: url("https://image.shutterstock.com/image-photo/panoramic-blue-sky-background-white-260nw-1540785395.jpg");
   background-size: cover;
-  padding-top: 10px;
-  padding-bottom: 10px;
+  min-height: 260px;
   margin: 10px 0 10px 0;
 }
 .input-group {
   overflow: hidden;
 }
-.join-form-text {
-  margin-top: 5%;
+.join-add-text {
+  padding-top: 1rem;
   font-weight: 500;
+  width: 65%;
+  p {
+    margin: 0;
+    font-size: 1rem;
+  }
 }
-.join-form-text p {
-  margin: 0;
+.join-form-text {
+  padding-top: 1rem;
+  font-weight: 500;
+  width: 100%;
+  font-size: 0.8rem;
+  label {
+    font-size: 0.7rem;
+  }
+}
+.joinCheckboxFields {
+  display: flex;
+  align-items: center;
+  label {
+    margin-left: 5px;
+  }
 }
 .add-main {
   margin-left: 20px;
+  h3 {
+    font-size: 2.5rem;
+
+    margin: 0;
+    padding: 0;
+  }
 }
+
 .join-form-div-button {
   width: 30%;
 }
 .join-form-add-button {
   background-color: #132e71;
   color: white;
-  font-size: 1vw;
+  font-size: 0.8rem;
   font-weight: 500;
   border: none;
   width: 100%;
+}
+@media screen and (max-width: 1000px) {
+  .add-main {
+    h3 {
+      font-size: 2rem;
+    }
+  }
+  .join-add-text {
+    p {
+      font-size: 0.8rem;
+    }
+  }
+  .form-control {
+    font-size: 0.8rem;
+  }
+}
+@media screen and (max-width: 800px) {
+  .join-main-container {
+    width: 100%;
+  }
+}
+@media screen and (max-width: 700px) {
+  .join-main-container {
+    display: flex;
+    flex-direction: column;
+  }
+  .right-container {
+    width: 100%;
+    @extend %minHeight;
+  }
+  .left-container {
+    width: 100%;
+    @extend %minHeight;
+  }
+  %minHeight {
+    height: 120px;
+  }
+  .add-main {h3 {
+    text-align: center;
+    font-size: 1.4rem;
+  }
+}
+  .join-add-text {
+    padding-top: 0.2rem;
+    width: 100%;
+  }
 }
