--- a/src/style/headerStyle.scss
+++ b/src/style/headerStyle.scss
@@ -2,20 +2,19 @@
   width: 80%;
   margin-right: auto;
   margin-left: auto;
-
 }
 .header-top-object {
   // margin-left: 2%;
   display: flex;
   align-items: center;
-  width: 120px;
+  width: 100px;
   font-weight: 600;
   > select {
-    color:#132e71;
+    color: #132e71;
     border: none;
     font-weight: 600;
   }
-  :hover{
+  :hover {
     cursor: pointer;
   }
 }
@@ -27,6 +26,7 @@
   justify-content: flex-start;
   width: 35%;
   min-width: 255px;
+  max-width: 340px;
 }
 
 .main-bar-user {
@@ -34,95 +34,108 @@
   justify-content: flex-end;
   padding: 10px 5px;
 }
-.main-bar-user-nav{
+.main-bar-user-nav {
   display: flex;
   justify-content: space-between;
-  width: 35%;
+  width: 340px;
   padding: 0;
   font-size: 0.9rem;
-  min-width: 320px;
 }
 .main-bar-margin-left {
-  margin-left: 1.2vw;
+  margin-left: 0.42vw;
 }
 .main-bar-ticket {
   display: flex;
   justify-content: space-between;
-  padding: 10px 5px;
+  padding: 0px 5px;
 }
 .section-border-bottom {
   border-bottom: 1px solid black;
 }
 .main-bar-logo {
-  padding: 0.5rem;
+  // padding: 0.5rem;
 }
 .main-lot-icon {
   width: 120px;
 }
 .main-lot-reservation {
-  img{
+  img {
     width: 43px;
   }
- 
 }
 .main-lot-reservation-text {
   margin-left: 10px;
   font-weight: 500;
   p:nth-child(2) {
     min-width: 360px;
-      display: flex;
-      justify-content: space-between;
-    }
+    display: flex;
+    justify-content: space-between;
+  }
 }
 // .main-lot-reservation-text p:nth-child(2) {
 // min-width: 360px;
 //   display: flex;
 //   justify-content: space-between;
 // }
-.header-reservation-container{
+.header-reservation-container {
   display: flex;
   justify-content: flex-start;
   align-items: center;
   width: 250px;
- 
 }
-.header-reservation-img
-{
+.header-reservation-img {
   height: 45px;
   width: 45px;
   display: flex;
   justify-content: center;
   align-items: center;
 }
-.header-reservation-info{
+.header-reservation-info {
   height: 100%;
   width: 185px;
   font-size: 1rem;
   font-weight: 500;
   margin-left: 5px;
 }
-.header-reservation-text{
+.header-reservation-text {
   display: flex;
   justify-content: space-between;
-  :last-child:hover{
+  :last-child:hover {
+    cursor: pointer;
+    color:blue
+    
+  }
+  :first-child {
+    font-weight: 900;
+  }
+  :last-child {
+    font-weight: 700;
+    text-decoration: underline;
+    :hover {
       cursor: pointer;
-      font-weight: 700;
+      
+    }
+   
   }
 }
-.header-reservation-title{
+// .header-reservation-text :last-child:hover {
+//   cursor: pointer;
+//   color:red
+  
+// }
+.header-reservation-title {
   font-size: 1rem;
+  font-weight: 600;
   white-space: nowrap;
 }
-.img-div{
+.img-div {
   width: 9rem;
 }
 @media screen and (max-width: 800px) {
-  
-  .header-reservation-container
-  {
+  .header-reservation-container {
     width: 200px;
   }
-  .header-reservation-info{
+  .header-reservation-info {
     width: 146px;
   }
   .header-bar {
@@ -133,19 +146,19 @@
   .main-bar-user-nav {
     width: 95%;
     justify-content: space-between;
-    margin:auto
+    margin: auto;
   }
   .main-bar-ticket {
     padding: 0;
   }
   .main-lot-reservation {
-     min-width: 200px;
+    min-width: 200px;
   }
-  .header-reservation-title, .header-reservation-text{
+  .header-reservation-title,
+  .header-reservation-text {
     font-size: 0.8rem;
   }
-  .img-div{
+  .img-div {
     width: 5rem;
   }
-  
 }
